@@ -1,5 +1,8 @@
 * Thu Jun 03 2021 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 7.0.2
 - Added tests for ds389 ldap server
+- SSSD will not start and the module fail if no domains are
+  defined.  The enable_files_domain setting is set to true to ensure
+  that sssd will start.
 
 * Wed Jun 02 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.1
 - Fixed:
